<resources>
    <string name="app_name">HATS Native</string>
    <string name="splash_text">HATS</string>
    <string name="splash_content_text">Loading Content..</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="iv_command">Enter Command</string>

    <!--  Menu Items  -->
    <string name="it_home">Home</string>
    <string name="it_wifi">WiFi Setup</string>
    <string name="it_dataset">Dataset File</string>
    <string name="it_about">About</string>
    <string name="it_settings">Settings</string>

    <!--TODO Remove this later    -->
    <!--  Fragment Temporary Strings  -->
    <string name="fr_home">Home Fragment</string>
    <string name="fr_wifi">WiFi Setup Fragment</string>
    <string name="fr_dataset">Dataset Fragment</string>
    <string name="fr_about">About Fragment</string>

    <!--TODO: Remove Nav Header String  -->
    <string name="test_user">Test User</string>

    <!--  Settings Fragment String Values  -->
    <string name="theme_switch">Dark Mode</string>
</resources>